# europeanconsortium

./: .env.example  .gitignore  BRANCH_ANALYSIS.md  CLAUDE_TASKS.md  CLEANUP_SUMMARY.md  HARDENING_PACK_SUMMARY.md  IMPLEMENTATION_GUIDES.md  PR_DESCRIPTION.md  PR_FEATURES_5_8.md  README.md  SPARC_REFACTOR_SPEC.md  pyproject.toml  test_6_agents.py  test_cascade_mode.py  test_graph_diagnostic.py  test_integration.py  test_pdf_generation.py
.claude/: MCP_SETUP.md  instructions.md  mcp_config.json
.roo/: context.md
agents/: alchemist.py  architect.py  base.py  cla.py  consumer_voice.py  economist.py  ecosystem.py  ethnographer.py  founder.py  intelligence_sovereign.py  jurist.py  philosopher.py  scout.py  sovereign.py  technologist.py
app/: pdf_components.py  pdf_export.py  streamlit_app.py
config/: convergence.yaml  evidence_referee.yaml  memory.yaml  model_tiers.yaml  providers.yaml  system.yaml  voice_rules.yaml
docs/: AGENTS.md  ARCHITECTURE_CRITICAL_FIXES.md  ARCHITECTURE_INTEGRATED.md  ARCHITECTURE_PART1.md  ARCHITECTURE_PART2.md  ARCHITECTURE_PART3.md  CONSORTIUM_LOGIC_V2.md  CONSORTIUM_LOGIC_V2_COMPLETE.md  ITERATION_3_SUMMARY.md  ITERATION_4_VALIDATION.md  ITERATION_5_COMPLETE.md  ITERATION_5_GRAPH_MVP.md  LANGCHAIN_RESEARCH_FINDINGS.md  LANGGRAPH_RESEARCH_FINDINGS.md  LLM_MODEL_REQUIREMENTS.md  PROJECT_STATUS.md  PSEUDOCODE.md  SPARC_PDF_IMPROVEMENT.md  UI_AND_BACKEND_FIXES.md  european_consortium_brief.md
examples/: simple_graph_demo.py
tests/: __init__.py  test_circuit_breaker.py  test_cla.py  test_competitive_advantage.py  test_config.py  (+22 more)
(+77 files in other folders)
